--- a/style.scss
+++ b/style.scss
@@ -1,33 +1,178 @@
-@import url('https://fonts.googleapis.com/css?family=Cousine:700|Cousine:400');
+@import url("https://fonts.googleapis.com/css?family=Cousine:700|Cousine:400");
 
-:root {
-  $text: #0f0e10;
-  $background: #efeff1;
-  $primary: #343239;
-  $secondary: #e2e1e5;
-  $accent: #7a7584;
-}
+$text: #deeef7;
+$background: #03090c;
+$primary: #114a6b;
+$secondary: #0e2a39;
+$accent: #429dd1;
 
 body {
-  font-family: 'Cousine';
+  font-family: "Cousine";
   font-weight: 400;
+  height: 100vh;
+  width: 100vw;
+  margin: 0;
+  padding: 0;
+  background-color: $background;
+  background-image: url("./img/background.jpg");
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
 }
 
-h1, h2, h3, h4, h5 {
-  font-family: 'Cousine';
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-family: "Cousine";
   font-weight: 700;
 }
 
-html {font-size: 100%;} /* 16px */
+html {
+  font-size: 100%;
+} /* 16px */
 
-h1 {font-size: 5.652rem; /* 90.4px */}
+h1 {
+  font-size: 5.652rem; /* 90.4px */
+}
 
-h2 {font-size: 3.997rem; /* 64px */}
+h2 {
+  font-size: 3.997rem; /* 64px */
+}
 
-h3 {font-size: 2.827rem; /* 45.28px */}
+h3 {
+  font-size: 2.827rem; /* 45.28px */
+}
 
-h4 {font-size: 1.999rem; /* 32px */}
+h4 {
+  font-size: 1.999rem; /* 32px */
+}
 
-h5 {font-size: 1.414rem; /* 22.56px */}
+h5 {
+  font-size: 1.414rem; /* 22.56px */
+}
 
-small {font-size: 0.707rem; /* 11.36px */}
+small {
+  font-size: 0.707rem; /* 11.36px */
+}
+
+nav {
+  display: flex;
+  height: 10%;
+  width: 100%;
+  align-items: center;
+  background: rgba($background, 0.75);
+
+  .search-box,
+  .temp-toggle-container {
+    padding: 20px;
+  }
+
+  .search-box {
+    height: 20%;
+    width: 40%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 15px;
+
+    input {
+      height: fit-content;
+      width: 90%;
+      font-size: 2rem;
+      color: $text;
+      padding: 5px;
+      background-color: transparent;
+      border: solid 4px $accent;
+      border-radius: 18px;
+
+      &:focus {
+        outline: none;
+        background-color: rgba($background, 0.8);
+      }
+    }
+
+    button {
+      height: 100%;
+      width: 30px;
+      background-color: transparent;
+      border: none;
+      background-image: url("./img/search-icon.svg");
+      object-fit: cover;
+      background-repeat: no-repeat;
+    }
+  }
+
+  .temp-toggle-container {
+    margin-left: auto;
+    height: 40%;
+    width: fit-content;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+
+    .toggle-temp {
+      height: 60px;
+      width: 60px;
+      padding: 5px;
+      color: $text;
+      font-size: 4rem;
+      font-weight: bold;
+      text-align: center;
+      background-color: transparent;
+      border: solid 4px $accent;
+      border-radius: 18px;
+    }
+  }
+}
+
+main {
+  display: flex;
+  height: 90%;
+  width: 100%;
+  gap: 20px;
+  justify-content: center;
+  align-items: center;
+
+  .weather-data {
+    display: flex;
+    flex-direction: column;
+    height: 80%;
+    margin: 2em;
+    padding: 1.2em;
+    color: $text;
+    background-color: rgba($background, 0.75);
+    border-radius: 1em;
+  }
+  .current {
+    width: 70%;
+
+    .location-container {
+      text-align: center;
+      display: flex;
+
+      h2 {
+        color: $text;
+        font-size: 5rem;
+      }
+    }
+
+    .current-temp {
+      font-size: 4rem;
+      font-weight: 800;
+      color: $text;
+
+      text-shadow: 3px 3px $primary;
+    }
+
+    .current-condition {
+      height: 128px;
+      width: 128px;
+    }
+  }
+
+  .forecast {
+    width: 30%;
+  }
+}
