--- a/styles/_forecast.scss
+++ b/styles/_forecast.scss
@@ -1,108 +1,104 @@
 @use "./globals" as *;
 
-.forecast-container {
-  width: 80%;
-  display: flex;
-  flex-direction: column;
-  flex: 1;
-  align-items: center;
-  gap: 10px;
+.weather-data.expand-forecast {
+  display: none;
 
-  .expand-forecast {
-    @include breakpoint(tablet, max) {
-      align-self: flex-start;
-      margin-top: auto;
-      padding: 8px;
-      color: $text;
-      display: flex;
-      gap: 5px;
-      font-size: 2rem;
-      height: fit-content;
-      align-items: center;
-      background: rgba($background, 0.75);
-      backdrop-filter: blur(16px);
-      border-radius: 16px;
-      border: none;
+  @include breakpoint(tablet, max) {
+    width: calc(80% + 40px);
+    margin: 0;
+    margin-bottom: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 6px;
+    padding: 8px;
+    color: $text;
+    gap: 5px;
+    font-size: 2rem;
+    height: fit-content;
+    border: none;
+    box-shadow: none;
+    backdrop-filter: blur(16px);
 
-      img {
-        filter: invert(32%) sepia(8%) saturate(3697%) hue-rotate(300deg)
-          brightness(106%) contrast(92%);
-      }
+    img {
+      filter: invert(32%) sepia(8%) saturate(3697%) hue-rotate(300deg)
+        brightness(106%) contrast(92%);
     }
   }
+}
 
-  .weather-data.forecast {
+.weather-data.forecast {
+  display: flex;
+  flex: 1;
+  width: 80%;
+  gap: 20px;
+  flex-direction: column;
+  justify-items: center;
+  align-items: center;
+  margin-top: 0;
+
+  &.hidden {
+    display: none;
+  }
+
+  .forecast-day {
     display: flex;
-    gap: 20px;
-    flex-direction: row;
-    justify-items: center;
+    flex-direction: column;
     align-items: center;
+    justify-content: space-evenly;
     width: 100%;
-    margin: 0;
+    flex: 1;
+    font-weight: bold;
+    border: solid 4px $secondary;
+    border-radius: 18px;
+    padding: 8px;
     @include breakpoint(tablet, max) {
-      flex-direction: column;
-      flex: 2;
-      height: auto;
+      width: 80%;
+      height: fit-content;
+      display: flex;
+      flex-direction: row;
+
+      img {
+        height: 48px;
+        width: 48px;
+      }
     }
 
-    &.hidden {
-      display: none;
+    p {
+      font-size: 2rem;
+      margin-bottom: 0;
+      margin-top: 10px;
+      @include breakpoint(tablet, max) {
+        @include breakpoint(phone, max) {
+          font-size: 2.5rem;
+        }
+        font-size: 3rem;
+      }
     }
 
-    .forecast-day {
+    .temp-container {
       display: flex;
       flex-direction: column;
+      width: fit-content;
       align-items: center;
-      justify-content: space-evenly;
-      height: 90%;
-      width: 100%;
-      flex: 1;
-      font-size: 2rem;
-      font-weight: bold;
-      border: solid 4px $primary;
-      border-radius: 18px;
-      padding: 8px;
-      @include breakpoint(tablet, max) {
-        width: 80%;
-        height: fit-content;
-        display: flex;
-        flex-direction: row;
-
-        img {
-          height: 48px;
-          width: 48px;
-        }
-      }
-
-      .temp-container {
-        display: flex;
-        flex-direction: column;
-        width: fit-content;
-        align-items: center;
-        gap: 8px;
-
-        p {
-          font-size: 2rem;
-          margin-bottom: 0px;
-          margin-top: 0;
-          font-weight: 800;
-          color: $text;
-          text-shadow: 3px 3px $accent;
-
-          &:last-child {
-            text-shadow: none;
-            color: rgba($accent, 0.9);
-            align-self: flex-end;
-            font-size: 1.2rem;
-            font-style: italic;
-            font-weight: 300;
-          }
-        }
-      }
+      gap: 8px;
 
       p {
-        margin-bottom: 0;
-        margin-top: 10px;
+        font-size: 2rem;
+        margin-bottom: 0px;
+        margin-top: 0;
+        font-weight: 800;
+        color: $text;
+        text-shadow: 2px 2px $accent;
+
+        &:last-child {
+          text-shadow: none;
+          color: rgba($accent, 0.9);
+          align-self: flex-end;
+          font-size: 1.2rem;
+          font-style: italic;
+          font-weight: 300;
+        }
       }
     }
   }
