--- a/styles/_forecast.scss
+++ b/styles/_forecast.scss
@@ -49,14 +49,11 @@
     width: 100%;
     flex: 1;
     font-weight: bold;
-    border: solid 4px $secondary;
+    border: solid 4px $primary;
     border-radius: 18px;
     padding: 8px;
     @include breakpoint(tablet, max) {
-      width: 80%;
       height: fit-content;
-      display: flex;
-      flex-direction: row;
 
       img {
         height: 48px;
