--- a/styles/_globals.scss
+++ b/styles/_globals.scss
@@ -18,3 +18,13 @@ $breakpoints: (
     }
   }
 }
+
+@mixin animate($animation, $duration, $method, $times) {
+  animation: $animation $duration $method $times;
+}
+
+@mixin keyframes($name) {
+  @keyframes #{$name} {
+    @content;
+  }
+}
