--- a/styles/_navbar.scss
+++ b/styles/_navbar.scss
@@ -14,12 +14,40 @@ nav {
   }
 
   .search-box {
-    height: 20%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: fit-content;
     width: 40%;
     display: flex;
     justify-content: flex-start;
     align-items: center;
     gap: 15px;
+
+    .error-msg {
+      color: $accent;
+      position: absolute;
+      top: 90px;
+      font-size: 1.4rem;
+
+      @include keyframes(fade-in) {
+        0% {
+          opacity: 0;
+        }
+        50% {
+          opactity: 0.5;
+        }
+        100% {
+          opacity: 1;
+        }
+      }
+      @include animate(fade-in, 0.8s, linear, 1);
+
+      &.hidden {
+        display: none;
+      }
+    }
 
     input {
       height: fit-content;
