chore: change font

--- a/styles/_forecast.scss
+++ b/styles/_forecast.scss
@@ -48,7 +48,7 @@
     justify-content: space-evenly;
     width: 100%;
     flex: 1;
-    font-weight: bold;
+    font-weight: 800;
     border: solid 4px $primary;
     border-radius: 18px;
     padding: 8px;
